style(game-details): avoid blurry borders

--- a/src/app/views/games/details/games-details.scss
+++ b/src/app/views/games/details/games-details.scss
@@ -49,6 +49,7 @@
             display: block;
             background-size: 100% 100% !important;
             -webkit-filter: blur(1px);
+			border: 2px black solid;
         }
 
         .background-overlay {
